--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,31 @@
-body
+
+body {
   font-size: 14px;
 }
 
+/*Style for heading*/
 nav {
-  background color: yellow;
+  background-color: yellow;
   height: 100px;
   margin-top: -10px;
   position: fixed;
   width: 100%;
-
-
-section {
-  margin: 0 auto;
-  width: 60%;
 }
 
 h1 {
-  font-family sans-serif;
+  font-family: sans-serif;
   font-size: 2em;
+}
+
+/*Style for content*/
+section {
+  margin: 0 auto; /* Can also use disply: flex; justify-content: center;*/
+  width: 60%;
 }
 
 .example, h3 {
   padding-top: 30px;
-  text-align center
+  text-align: center;
 }
 
 h3 {
@@ -34,3 +37,11 @@ h3 {
   height: 100px;
   margin 10px 0;
   width: 100%;
+}
+
+.element_b {
+  background-color: blue;
+  height: 100px;
+  margin 10px 0;
+  width: 100%;
+}
