--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,9 @@ body {
 
 /*Style for heading*/
 nav {
-  background-color: yellow;
+  background-color: #ff0;
   height: 100px;
-  margin-top: -10px;
+  margin-top: 0px;
   position: fixed;
   width: 100%;
 }
@@ -19,8 +19,9 @@ h1 {
 
 /*Style for content*/
 section {
-  margin: 0 auto; /* Can also use disply: flex; justify-content: center;*/
+  margin: 10px auto;/* Can also use disply: flex; justify-content: center;*/
   width: 60%;
+  padding-top: 100px;
 }
 
 .example, h3 {
@@ -33,15 +34,12 @@ h3 {
 }
 
 .element {
-  background-color: green;
+  background-color: #0f0;
   height: 100px;
-  margin 10px 0;
+  margin: 10px 0;
   width: 100%;
 }
 
-.element_b {
-  background-color: blue;
-  height: 100px;
-  margin 10px 0;
-  width: 100%;
+.blue {
+  background-color: #00f;
 }
