--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,15 @@
 
 body {
-  font-size: 14px;
+  font-size: 16px;
 }
 
 /*Style for heading*/
 nav {
-  background-color: #ff0;
-  padding-top: 40px;
-  padding-bottom: 40px;
-  top: 0px;
-  position: fixed;
   width: 100%;
+  position: fixed;
+  top: 0px;
+  padding: 40px 0;
+  background-color: #ff0;
 }
 
 h1 {
@@ -20,9 +19,9 @@ h1 {
 
 /*Style for content*/
 section {
-  margin: 10px auto;/* Can also use disply: flex; justify-content: center;*/
   width: 60%;
   padding-top: 100px;
+  margin: 10px auto;/* Can also use disply: flex; justify-content: center;*/
 }
 
 .example, h3 {
@@ -30,15 +29,14 @@ section {
 }
 
 h3 {
-  font-size: 1.3em;
+  font-size: 1.2em;
 }
 
 .element {
-  background-color: #0f0;
-  padding-top: 30px;
-  padding-bottom: 30px;
-  margin: 10px 0;
   width: 100%;
+  padding: 30px 0;
+  margin: 10px 0;
+  background-color: #0f0;
 }
 
 .blue {
